[metadata]
name = btype
version = 0.1.4
author = Terry Greeniaus
author_email = terrygreeniaus@gmail.com
description = Package for dealing with binary structures
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = struct type binary
url = https://github.com/tgree/btype
license = LGPLv2
license-file = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)

[options]
python_requires = >=3.0
packages = btype
